plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

group 'io.github.tanialx'
version '0.0.1'

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    implementation 'com.squareup:javapoet:1.13.0'
    compileOnly "org.openjfx:javafx-base:17:linux"
    compileOnly "org.openjfx:javafx-controls:17:linux"
    compileOnly "org.openjfx:javafx-graphics:17:linux"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'com.google.testing.compile:compile-testing:0.17'
    testImplementation "org.openjfx:javafx-base:17:linux"
    testImplementation "org.openjfx:javafx-controls:17:linux"
    testImplementation "org.openjfx:javafx-graphics:17:linux"
}

test {
    useJUnitPlatform()
    doFirst {
        jvmArgs = [
                '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
        ]
    }
}

publishing {
    publications {
        jfxooPub(MavenPublication) {
            from components.java
        }
    }
}
